--- a/index.html
+++ b/index.html
@@ -51,12 +51,40 @@
 </head>
 
 <body class="h-full bg-white">
-  <!-- Deine komplette Seite -->
   <div class="frame-root">
     <div class="frame-content">
-      <!-- Hier kommt der ganze HTML-Content rein, den du mir gegeben hast -->
-      <!-- Header, Hero, Sections, Footer -->
-      <!-- Ich habe den Code nicht gekürzt – du kannst den von dir geposteten Content direkt hier reinkopieren -->
+
+      <!-- ========= HEADER ========= -->
+      <header id="global-header" class="code-section bg-white shadow-lg sticky top-0 z-50">
+        <!-- dein kompletter Header mit Logo & Navigation -->
+        ... (hier dein Header-Block, den du mir gepostet hast) ...
+      </header>
+
+      <!-- ========= HERO ========= -->
+      <section id="sxtx3wh" class="code-section relative min-h-screen flex items-center overflow-hidden">
+        ... Hero-Sektion mit Bild, Slogan und CTA-Buttons ...
+      </section>
+
+      <!-- ========= SERVICES ========= -->
+      <section id="stsu13g" class="code-section py-20 bg-[var(--light-background-color)]">
+        ... Services: Business Models, Platform Development, Automated Systems ...
+      </section>
+
+      <!-- ========= WHY CHOOSE ========= -->
+      <section id="syt42ef" class="code-section py-20 bg-white">
+        ... Why International Companies Choose Frohsinn LLC ...
+      </section>
+
+      <!-- ========= PROCESS ========= -->
+      <section id="sj4i8s8" class="code-section py-20 bg-[var(--light-background-color)]">
+        ... Our Proven Process (4 Steps + CTA) ...
+      </section>
+
+      <!-- ========= FOOTER ========= -->
+      <footer id="global-footer" class="code-section bg-[var(--dark-background-color)] text-[var(--light-text-color)] py-16">
+        ... dein kompletter Footer mit Quick Links & Legal ...
+      </footer>
+
     </div>
   </div>
 
