--- a/index.html
+++ b/index.html
@@ -1,93 +1,157 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex, nofollow">
-  <link rel="icon" type="image/png" href="/favicon-paper-plane.png">
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Jakarta+Sans:wght@300;400;500;600;700&family=Kumbh+Sans:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
-
-  <!-- Icons & Tailwind -->
-  <script src="https://kit.fontawesome.com/8e98006f77.js" crossorigin="anonymous"></script>
+  <title>Frohsinn LLC – International Digital Solutions</title>
+  <link rel="icon" href="favicon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Custom Variables -->
-  <style>
-    :root {
-      --accent-color: #007fc8;
-      --accent2-color: #ff005a;
-      --accent3-color: #74d0ff;
-      --accent4-color: #ffa352;
-      --primary-color: #004aad;
-      --dark-text-color: #012451;
-      --gray-text-color: #747474;
-      --button-padding-x: 12px;
-      --button-padding-y: 8px;
-      --font-family-body: Kumbh Sans;
-      --light-text-color: #fefefe;
-      --dark-border-color: #01162b;
-      --light-border-color: #d4dce5;
-      --font-family-heading: Jakarta Sans;
-      --button-rounded-radius: 4px;
-      --dark-background-color: #00274d;
-      --light-background-color: #e4f0fb;
-      --medium-background-color: #c8e0f6;
-      --primary-button-text-color: #ffffff;
-      --secondary-button-bg-color: #f1f1f1;
-      --secondary-button-text-color: #004aad;
-      --primary-button-hover-bg-color: #003a82;
-      --primary-button-hover-text-color: #fafafa;
-      --secondary-button-hover-bg-color: #e1e1e1;
-      --secondary-button-hover-text-color: #003a82;
-    }
-  </style>
+  <script src="https://kit.fontawesome.com/8e98006f77.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="h-full bg-white">
-  <div class="frame-root">
-    <div class="frame-content">
+<body class="font-sans text-gray-800">
 
-      <!-- ========= HEADER ========= -->
-      <header id="global-header" class="code-section bg-white shadow-lg sticky top-0 z-50">
-        <!-- dein kompletter Header mit Logo & Navigation -->
-        ... (hier dein Header-Block, den du mir gepostet hast) ...
-      </header>
-
-      <!-- ========= HERO ========= -->
-      <section id="sxtx3wh" class="code-section relative min-h-screen flex items-center overflow-hidden">
-        ... Hero-Sektion mit Bild, Slogan und CTA-Buttons ...
-      </section>
-
-      <!-- ========= SERVICES ========= -->
-      <section id="stsu13g" class="code-section py-20 bg-[var(--light-background-color)]">
-        ... Services: Business Models, Platform Development, Automated Systems ...
-      </section>
-
-      <!-- ========= WHY CHOOSE ========= -->
-      <section id="syt42ef" class="code-section py-20 bg-white">
-        ... Why International Companies Choose Frohsinn LLC ...
-      </section>
-
-      <!-- ========= PROCESS ========= -->
-      <section id="sj4i8s8" class="code-section py-20 bg-[var(--light-background-color)]">
-        ... Our Proven Process (4 Steps + CTA) ...
-      </section>
-
-      <!-- ========= FOOTER ========= -->
-      <footer id="global-footer" class="code-section bg-[var(--dark-background-color)] text-[var(--light-text-color)] py-16">
-        ... dein kompletter Footer mit Quick Links & Legal ...
-      </footer>
-
+  <!-- Header -->
+  <header class="bg-white shadow sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto flex justify-between items-center p-6">
+      <a href="#"><img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/0c49d5fd-9884-4917-aafd-3ddb85d35f00/public" alt="Frohsinn LLC" class="h-16"></a>
+      <nav class="hidden md:flex space-x-8 font-medium">
+        <a href="#about" class="hover:text-blue-600">About Us</a>
+        <a href="#services" class="hover:text-blue-600">Services</a>
+        <a href="#projects" class="hover:text-blue-600">Projects</a>
+        <a href="#contact" class="hover:text-blue-600">Contact</a>
+        <a href="#contact" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800">Work With Us</a>
+      </nav>
     </div>
-  </div>
+  </header>
 
-  <script src="/embed/main.umd.js"></script>
+  <!-- Hero -->
+  <section class="relative bg-blue-900 text-white min-h-screen flex items-center">
+    <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/b21c9d8d-7f3a-40ee-22e9-7d9c267a2d00/publicContain" alt="" class="absolute inset-0 w-full h-full object-cover opacity-40">
+    <div class="relative max-w-7xl mx-auto grid md:grid-cols-2 gap-12 p-8">
+      <div class="space-y-6">
+        <h1 class="text-5xl font-bold leading-tight">Transforming <span class="text-sky-400">Creative Ideas</span> into <span class="text-sky-400">Global Success</span></h1>
+        <p class="text-lg opacity-90">Frohsinn LLC is a single-member US-registered company creating innovative digital business models, automated platforms, and scalable systems for international markets.</p>
+        <div class="flex space-x-4">
+          <a href="#contact" class="bg-sky-400 text-black px-6 py-3 rounded font-semibold hover:bg-orange-400">Start Your Project</a>
+          <a href="#services" class="border border-white px-6 py-3 rounded font-semibold hover:bg-white hover:text-blue-900">Explore Services</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Services -->
+  <section id="services" class="py-20 bg-gray-50">
+    <div class="max-w-7xl mx-auto text-center mb-12">
+      <h2 class="text-4xl font-bold mb-4">International Digital Solutions</h2>
+      <p class="text-lg text-gray-600">We specialize in developing scalable digital solutions for international markets, transforming creative ideas into measurable business success.</p>
+    </div>
+    <div class="grid md:grid-cols-3 gap-8 max-w-7xl mx-auto px-6">
+      <div class="bg-white shadow-lg rounded-xl p-8">
+        <i class="fas fa-sitemap text-blue-700 text-4xl mb-4"></i>
+        <h3 class="text-2xl font-bold mb-3">Digital Business Models</h3>
+        <p class="text-gray-600 mb-4">Strategic frameworks and architectures that scale with your business growth.</p>
+        <ul class="text-sm text-gray-600 space-y-2">
+          <li>✔ Revenue Model Optimization</li>
+          <li>✔ Market Analysis & Strategy</li>
+          <li>✔ Competitive Positioning</li>
+        </ul>
+      </div>
+      <div class="bg-white shadow-lg rounded-xl p-8">
+        <i class="fas fa-code text-pink-600 text-4xl mb-4"></i>
+        <h3 class="text-2xl font-bold mb-3">Platform Development</h3>
+        <p class="text-gray-600 mb-4">Custom platforms built for performance, security, and scalability.</p>
+        <ul class="text-sm text-gray-600 space-y-2">
+          <li>✔ Cloud-Native Architecture</li>
+          <li>✔ API Development & Integration</li>
+          <li>✔ Performance Optimization</li>
+        </ul>
+      </div>
+      <div class="bg-white shadow-lg rounded-xl p-8">
+        <i class="fas fa-cogs text-orange-500 text-4xl mb-4"></i>
+        <h3 class="text-2xl font-bold mb-3">Automated Systems</h3>
+        <p class="text-gray-600 mb-4">Intelligent automation that reduces manual work and increases efficiency.</p>
+        <ul class="text-sm text-gray-600 space-y-2">
+          <li>✔ Workflow Automation</li>
+          <li>✔ Data Processing Pipelines</li>
+          <li>✔ Quality Assurance Systems</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Why Choose -->
+  <section id="about" class="py-20 bg-white">
+    <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 px-6 items-center">
+      <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/02af05a2-f325-4039-9864-4b5e3d111300/public" alt="Team Strategy" class="rounded-xl shadow-lg">
+      <div>
+        <h2 class="text-4xl font-bold mb-6">Why International Companies Choose Frohsinn LLC</h2>
+        <p class="text-lg text-gray-600 mb-6">As a single-member US-registered LLC focused on international projects, we provide global solutions with optimal tax efficiency and regulatory compliance.</p>
+        <ul class="space-y-4 text-gray-700">
+          <li>🌍 International Operations Only</li>
+          <li>📜 US-Registered Legal Entity</li>
+          <li>📈 Built for Global Scale</li>
+          <li>💰 Tax-Optimized Structure</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Process -->
+  <section class="py-20 bg-gray-50">
+    <div class="max-w-7xl mx-auto text-center mb-12 px-6">
+      <h2 class="text-4xl font-bold mb-4">Our Proven Process</h2>
+      <p class="text-lg text-gray-600">From consultation to launch, we follow a structured approach that ensures success.</p>
+    </div>
+    <div class="grid md:grid-cols-4 gap-8 max-w-7xl mx-auto px-6">
+      <div class="bg-white shadow-lg rounded-xl p-6">
+        <h3 class="font-bold mb-2">1. Discovery & Strategy</h3>
+        <p class="text-sm text-gray-600">We analyze your needs and goals to build a solid plan.</p>
+      </div>
+      <div class="bg-white shadow-lg rounded-xl p-6">
+        <h3 class="font-bold mb-2">2. Design & Architecture</h3>
+        <p class="text-sm text-gray-600">Blueprints & specifications for scalable solutions.</p>
+      </div>
+      <div class="bg-white shadow-lg rounded-xl p-6">
+        <h3 class="font-bold mb-2">3. Development & Testing</h3>
+        <p class="text-sm text-gray-600">Agile development with continuous testing.</p>
+      </div>
+      <div class="bg-white shadow-lg rounded-xl p-6">
+        <h3 class="font-bold mb-2">4. Launch & Optimize</h3>
+        <p class="text-sm text-gray-600">Deployment & ongoing optimization for results.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-blue-900 text-white py-12">
+    <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8 px-6">
+      <div>
+        <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/0c49d5fd-9884-4917-aafd-3ddb85d35f00/public" alt="Frohsinn LLC" class="h-16 mb-4">
+        <p class="text-sm opacity-80">Frohsinn LLC is a single-member US-registered Limited Liability Company specializing in international digital business solutions.</p>
+      </div>
+      <div>
+        <h3 class="font-bold mb-3">Quick Links</h3>
+        <ul class="space-y-2 text-sm">
+          <li><a href="#" class="hover:text-sky-400">Home</a></li>
+          <li><a href="#about" class="hover:text-sky-400">About Us</a></li>
+          <li><a href="#services" class="hover:text-sky-400">Services</a></li>
+          <li><a href="#projects" class="hover:text-sky-400">Projects</a></li>
+          <li><a href="#contact" class="hover:text-sky-400">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="font-bold mb-3">Legal & Support</h3>
+        <ul class="space-y-2 text-sm">
+          <li><a href="#legal" class="hover:text-sky-400">Legal Information</a></li>
+          <li><a href="#privacy" class="hover:text-sky-400">Privacy Policy</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="text-center text-sm opacity-70 mt-8">
+      © 2025 Frohsinn LLC. All rights reserved.
+    </div>
+  </footer>
+
 </body>
 </html>
