--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frohsinn LLC – International Digital Solutions</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="assets/favicon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://kit.fontawesome.com/8e98006f77.js" crossorigin="anonymous"></script>
 </head>
@@ -14,26 +14,30 @@
   <!-- Header -->
   <header class="bg-white shadow sticky top-0 z-50">
     <div class="max-w-7xl mx-auto flex justify-between items-center p-6">
-      <a href="#"><img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/0c49d5fd-9884-4917-aafd-3ddb85d35f00/public" alt="Frohsinn LLC" class="h-16"></a>
+      <a href="#"><img src="assets/logo.png" alt="Frohsinn LLC" class="h-16"></a>
       <nav class="hidden md:flex space-x-8 font-medium">
         <a href="#about" class="hover:text-blue-600">About Us</a>
         <a href="#services" class="hover:text-blue-600">Services</a>
         <a href="#projects" class="hover:text-blue-600">Projects</a>
-        <a href="#contact" class="hover:text-blue-600">Contact</a>
-        <a href="#contact" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800">Work With Us</a>
+        <a href="contact.html" class="hover:text-blue-600">Contact</a>
+        <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800">Work With Us</a>
       </nav>
     </div>
   </header>
 
   <!-- Hero -->
   <section class="relative bg-blue-900 text-white min-h-screen flex items-center">
-    <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/b21c9d8d-7f3a-40ee-22e9-7d9c267a2d00/publicContain" alt="" class="absolute inset-0 w-full h-full object-cover opacity-40">
+    <img src="assets/hero-bg.jpg" alt="" class="absolute inset-0 w-full h-full object-cover opacity-40">
     <div class="relative max-w-7xl mx-auto grid md:grid-cols-2 gap-12 p-8">
       <div class="space-y-6">
-        <h1 class="text-5xl font-bold leading-tight">Transforming <span class="text-sky-400">Creative Ideas</span> into <span class="text-sky-400">Global Success</span></h1>
-        <p class="text-lg opacity-90">Frohsinn LLC is a single-member US-registered company creating innovative digital business models, automated platforms, and scalable systems for international markets.</p>
+        <h1 class="text-5xl font-bold leading-tight">
+          Transforming <span class="text-sky-400">Creative Ideas</span> into <span class="text-sky-400">Global Success</span>
+        </h1>
+        <p class="text-lg opacity-90">
+          Frohsinn LLC is a US-registered company creating innovative digital business models, automated platforms, and scalable systems for international markets.
+        </p>
         <div class="flex space-x-4">
-          <a href="#contact" class="bg-sky-400 text-black px-6 py-3 rounded font-semibold hover:bg-orange-400">Start Your Project</a>
+          <a href="contact.html" class="bg-sky-400 text-black px-6 py-3 rounded font-semibold hover:bg-orange-400">Start Your Project</a>
           <a href="#services" class="border border-white px-6 py-3 rounded font-semibold hover:bg-white hover:text-blue-900">Explore Services</a>
         </div>
       </div>
@@ -83,10 +87,10 @@
   <!-- Why Choose -->
   <section id="about" class="py-20 bg-white">
     <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 px-6 items-center">
-      <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/02af05a2-f325-4039-9864-4b5e3d111300/public" alt="Team Strategy" class="rounded-xl shadow-lg">
+      <img src="assets/team.jpg" alt="Team Strategy" class="rounded-xl shadow-lg">
       <div>
         <h2 class="text-4xl font-bold mb-6">Why International Companies Choose Frohsinn LLC</h2>
-        <p class="text-lg text-gray-600 mb-6">As a single-member US-registered LLC focused on international projects, we provide global solutions with optimal tax efficiency and regulatory compliance.</p>
+        <p class="text-lg text-gray-600 mb-6">As a US-registered LLC focused on international projects, we provide global solutions with optimal tax efficiency and regulatory compliance.</p>
         <ul class="space-y-4 text-gray-700">
           <li>🌍 International Operations Only</li>
           <li>📜 US-Registered Legal Entity</li>
@@ -127,8 +131,8 @@
   <footer class="bg-blue-900 text-white py-12">
     <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8 px-6">
       <div>
-        <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/0c49d5fd-9884-4917-aafd-3ddb85d35f00/public" alt="Frohsinn LLC" class="h-16 mb-4">
-        <p class="text-sm opacity-80">Frohsinn LLC is a single-member US-registered Limited Liability Company specializing in international digital business solutions.</p>
+        <img src="assets/logo.png" alt="Frohsinn LLC" class="h-16 mb-4">
+        <p class="text-sm opacity-80">Frohsinn LLC is a US-registered Limited Liability Company specializing in international digital business solutions.</p>
       </div>
       <div>
         <h3 class="font-bold mb-3">Quick Links</h3>
@@ -137,19 +141,20 @@
           <li><a href="#about" class="hover:text-sky-400">About Us</a></li>
           <li><a href="#services" class="hover:text-sky-400">Services</a></li>
           <li><a href="#projects" class="hover:text-sky-400">Projects</a></li>
-          <li><a href="#contact" class="hover:text-sky-400">Contact</a></li>
+          <li><a href="contact.html" class="hover:text-sky-400">Contact</a></li>
         </ul>
       </div>
       <div>
         <h3 class="font-bold mb-3">Legal & Support</h3>
         <ul class="space-y-2 text-sm">
-          <li><a href="#legal" class="hover:text-sky-400">Legal Information</a></li>
-          <li><a href="#privacy" class="hover:text-sky-400">Privacy Policy</a></li>
+          <li><a href="legal.html" class="hover:text-sky-400">Legal Information</a></li>
+          <li><a href="privacy.html" class="hover:text-sky-400">Privacy Policy</a></li>
+          <li><a href="terms.html" class="hover:text-sky-400">Terms & Conditions</a></li>
         </ul>
       </div>
     </div>
     <div class="text-center text-sm opacity-70 mt-8">
-      © 2025 Frohsinn LLC. All rights reserved.
+      © 2025 Frohsinn LLC. All rights reserved. · Contact: <a href="mailto:mail@frohsinnglobal.com" class="text-sky-400">mail@frohsinnglobal.com</a>
     </div>
   </footer>
 
