--- a/privacy.html
+++ b/privacy.html
@@ -1,34 +1,32 @@
-<!doctype html>
-<html lang="de">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Datenschutz – Frohsinn LLC</title>
-  <link href="/styles.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy – Frohsinn LLC</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="container">
-    <h1>Datenschutzerklärung</h1>
-    <div class="card">
-      <p>Verantwortlich: Frohsinn LLC, Kontaktadresse: Eckenheimer Landstraße 124, 60318 Frankfurt am Main, Germany, E‑Mail: <a href="mailto:frohsinnllc@gmail.com">frohsinnllc@gmail.com</a>. Registered in Wyoming, USA.</p>
-      <h2>Grundsätze</h2>
-      <ul>
-        <li>Kein Marketing‑Tracking, keine Third‑Party‑Cookies standardmäßig.</li>
-        <li>Server‑Logs werden nur zur Sicherstellung des Betriebs genutzt und nach kurzer Frist gelöscht.</li>
-        <li>Anfragen per Formular/E‑Mail werden ausschließlich zur Bearbeitung gespeichert.</li>
-      </ul>
-      <h2>Ihre Rechte (GDPR)</h2>
-      <ul>
-        <li>Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit, Widerspruch.</li>
-        <li>Kontakt: <a href="mailto:frohsinnllc@gmail.com">frohsinnllc@gmail.com</a>. Sie haben das Recht, sich bei einer Aufsichtsbehörde zu beschweren.</li>
-      </ul>
-      <h2>Auftragsverarbeiter</h2>
-      <p>Sofern wir Dienstleister einsetzen (z. B. Hosting), schließen wir DSGVO‑konforme Verträge ab.</p>
-      <h2>Speicherdauer</h2>
-      <p>Wir speichern personenbezogene Daten nur so lange, wie es für die Zwecke der Bearbeitung notwendig ist.</p>
-      <p class="small">Stand: 2025-09-10</p>
-    </div>
-    <p><a class="btn" href="/index.html">Zurück</a></p>
+<body class="bg-gray-50 text-gray-800">
+  <div class="max-w-4xl mx-auto p-8">
+    <h1 class="text-3xl font-bold mb-6">Privacy Policy</h1>
+
+    <p class="mb-4">Frohsinn LLC respects your privacy and complies with applicable data protection laws (including GDPR for EU visitors).</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">1. Data Collection</h2>
+    <p class="mb-4">This website does not use cookies, analytics, or tracking scripts.  
+    We only collect personal data you provide voluntarily when contacting us by email.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">2. Data Usage</h2>
+    <p class="mb-4">Your data is used solely for communication and providing requested services.  
+    We do not share data with third parties.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">3. Data Storage</h2>
+    <p class="mb-4">No personal data is stored on this website. Emails are processed exclusively via your chosen provider (e.g., Outlook, Gmail).</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">4. Contact</h2>
+    <p>If you have questions about data protection, contact us:  
+      <a href="mailto:mail@frohsinnglobal.com" class="text-blue-600">mail@frohsinnglobal.com</a>
+    </p>
   </div>
 </body>
 </html>
