--- a/terms.html
+++ b/terms.html
@@ -1,28 +1,32 @@
-<!doctype html>
-<html lang="de">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>AGB / Terms – Frohsinn LLC</title>
-  <link href="/styles.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terms & Conditions – Frohsinn LLC</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="container">
-    <h1>Allgemeine Geschäftsbedingungen (AGB) / Terms</h1>
-    <div class="card">
-      <h2>Leistungsumfang</h2>
-      <p>Frohsinn LLC erbringt Beratungs‑, Medien‑ und Operations‑Leistungen auf Projektbasis. Verbindlich sind individuelle Angebote/Verträge.</p>
-      <h2>Vergütung & Fälligkeit</h2>
-      <p>Rechnungen sind binnen 7 Tagen ohne Abzug fällig, sofern nicht anders vereinbart.</p>
-      <h2>Haftung</h2>
-      <p>Wir haften für Vorsatz und grobe Fahrlässigkeit. Im Übrigen ist die Haftung auf vertragstypische, vorhersehbare Schäden begrenzt.</p>
-      <h2>Vertraulichkeit</h2>
-      <p>Beide Parteien behandeln vertrauliche Informationen streng vertraulich.</p>
-      <h2>Anwendbares Recht / Gerichtsstand</h2>
-      <p>Es gilt – je nach Vertragspartner – deutsches oder US‑Recht (Wyoming); Gerichtsstand nach gesetzlicher Regel.</p>
-      <p class="small">Stand: 2025-09-10</p>
-    </div>
-    <p><a class="btn" href="/index.html">Zurück</a></p>
+<body class="bg-gray-50 text-gray-800">
+  <div class="max-w-4xl mx-auto p-8">
+    <h1 class="text-3xl font-bold mb-6">Terms & Conditions</h1>
+
+    <h2 class="text-xl font-semibold mb-2">1. Scope</h2>
+    <p class="mb-4">These Terms & Conditions apply to all services and digital solutions provided by Frohsinn LLC.</p>
+
+    <h2 class="text-xl font-semibold mb-2">2. Services</h2>
+    <p class="mb-4">We provide consultancy, platform development, and automation solutions for international clients.  
+    Specific details are agreed upon contractually with each client.</p>
+
+    <h2 class="text-xl font-semibold mb-2">3. Liability</h2>
+    <p class="mb-4">We are not liable for indirect damages, loss of profit, or third-party claims, except in cases of intent or gross negligence.</p>
+
+    <h2 class="text-xl font-semibold mb-2">4. Governing Law</h2>
+    <p class="mb-4">This agreement is governed by the laws of Wyoming, USA, without regard to conflict of law principles.</p>
+
+    <h2 class="text-xl font-semibold mb-2">5. Contact</h2>
+    <p>For any inquiries regarding these Terms, contact us:  
+      <a href="mailto:mail@frohsinnglobal.com" class="text-blue-600">mail@frohsinnglobal.com</a>
+    </p>
   </div>
 </body>
 </html>
