--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frohsinn LLC – International Digital Solutions</title>
-  <link rel="icon" href="assets/favicon.png" type="image/png">
+  <link rel="icon" href="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/0c49d5fd-9884-4917-aafd-3ddb85d35f00/public" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://kit.fontawesome.com/8e98006f77.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +14,7 @@
   <!-- Header -->
   <header class="bg-white shadow sticky top-0 z-50">
     <div class="max-w-7xl mx-auto flex justify-between items-center p-6">
-      <a href="#"><img src="assets/logo.png" alt="Frohsinn LLC" class="h-16"></a>
+      <a href="#"><img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/0c49d5fd-9884-4917-aafd-3ddb85d35f00/public" alt="Frohsinn LLC" class="h-16"></a>
       <nav class="hidden md:flex space-x-8 font-medium">
         <a href="#about" class="hover:text-blue-600">About Us</a>
         <a href="#services" class="hover:text-blue-600">Services</a>
@@ -27,7 +27,7 @@
 
   <!-- Hero -->
   <section class="relative bg-blue-900 text-white min-h-screen flex items-center">
-    <img src="assets/hero-bg.jpg" alt="" class="absolute inset-0 w-full h-full object-cover opacity-40">
+    <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/b21c9d8d-7f3a-40ee-22e9-7d9c267a2d00/publicContain" alt="Hero Background" class="absolute inset-0 w-full h-full object-cover opacity-40">
     <div class="relative max-w-7xl mx-auto grid md:grid-cols-2 gap-12 p-8">
       <div class="space-y-6">
         <h1 class="text-5xl font-bold leading-tight">
@@ -87,7 +87,7 @@
   <!-- Why Choose -->
   <section id="about" class="py-20 bg-white">
     <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 px-6 items-center">
-      <img src="assets/team.jpg" alt="Team Strategy" class="rounded-xl shadow-lg">
+      <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/02af05a2-f325-4039-9864-4b5e3d111300/public" alt="Team Strategy" class="rounded-xl shadow-lg">
       <div>
         <h2 class="text-4xl font-bold mb-6">Why International Companies Choose Frohsinn LLC</h2>
         <p class="text-lg text-gray-600 mb-6">As a US-registered LLC focused on international projects, we provide global solutions with optimal tax efficiency and regulatory compliance.</p>
@@ -101,37 +101,11 @@
     </div>
   </section>
 
-  <!-- Process -->
-  <section class="py-20 bg-gray-50">
-    <div class="max-w-7xl mx-auto text-center mb-12 px-6">
-      <h2 class="text-4xl font-bold mb-4">Our Proven Process</h2>
-      <p class="text-lg text-gray-600">From consultation to launch, we follow a structured approach that ensures success.</p>
-    </div>
-    <div class="grid md:grid-cols-4 gap-8 max-w-7xl mx-auto px-6">
-      <div class="bg-white shadow-lg rounded-xl p-6">
-        <h3 class="font-bold mb-2">1. Discovery & Strategy</h3>
-        <p class="text-sm text-gray-600">We analyze your needs and goals to build a solid plan.</p>
-      </div>
-      <div class="bg-white shadow-lg rounded-xl p-6">
-        <h3 class="font-bold mb-2">2. Design & Architecture</h3>
-        <p class="text-sm text-gray-600">Blueprints & specifications for scalable solutions.</p>
-      </div>
-      <div class="bg-white shadow-lg rounded-xl p-6">
-        <h3 class="font-bold mb-2">3. Development & Testing</h3>
-        <p class="text-sm text-gray-600">Agile development with continuous testing.</p>
-      </div>
-      <div class="bg-white shadow-lg rounded-xl p-6">
-        <h3 class="font-bold mb-2">4. Launch & Optimize</h3>
-        <p class="text-sm text-gray-600">Deployment & ongoing optimization for results.</p>
-      </div>
-    </div>
-  </section>
-
   <!-- Footer -->
   <footer class="bg-blue-900 text-white py-12">
     <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8 px-6">
       <div>
-        <img src="assets/logo.png" alt="Frohsinn LLC" class="h-16 mb-4">
+        <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/0c49d5fd-9884-4917-aafd-3ddb85d35f00/public" alt="Frohsinn LLC" class="h-16 mb-4">
         <p class="text-sm opacity-80">Frohsinn LLC is a US-registered Limited Liability Company specializing in international digital business solutions.</p>
       </div>
       <div>
