--- a/privacy.html
+++ b/privacy.html
@@ -21,11 +21,11 @@
     We do not share data with third parties.</p>
 
     <h2 class="text-xl font-semibold mt-6 mb-2">3. Data Storage</h2>
-    <p class="mb-4">No personal data is stored on this website. Emails are processed exclusively via your chosen provider (e.g., Outlook, Gmail).</p>
+    <p class="mb-4">No personal data is stored on this website. Emails are processed exclusively via your chosen provider.</p>
 
     <h2 class="text-xl font-semibold mt-6 mb-2">4. Contact</h2>
-    <p>If you have questions about data protection, contact us:  
-      <a href="mailto:mail@frohsinnglobal.com" class="text-blue-600">mail@frohsinnglobal.com</a>
+    <p>If you have questions about data protection, contact us:<br>
+      Email: <a href="mailto:mail@frohsinnglobal.com" class="text-blue-600">mail@frohsinnglobal.com</a>
     </p>
   </div>
 </body>
