--- a/terms.html
+++ b/terms.html
@@ -24,8 +24,8 @@
     <p class="mb-4">This agreement is governed by the laws of Wyoming, USA, without regard to conflict of law principles.</p>
 
     <h2 class="text-xl font-semibold mb-2">5. Contact</h2>
-    <p>For any inquiries regarding these Terms, contact us:  
-      <a href="mailto:mail@frohsinnglobal.com" class="text-blue-600">mail@frohsinnglobal.com</a>
+    <p>For any inquiries regarding these Terms, contact us:<br>
+      Email: <a href="mailto:mail@frohsinnglobal.com" class="text-blue-600">mail@frohsinnglobal.com</a>
     </p>
   </div>
 </body>
