--- a/index.html
+++ b/index.html
@@ -46,48 +46,93 @@
 
   <!-- Services -->
   <section id="services" class="py-20 bg-gray-50">
-    <div class="max-w-7xl mx-auto text-center mb-12">
-      <h2 class="text-4xl font-bold mb-4">International Digital Solutions</h2>
-      <p class="text-lg text-gray-600">We specialize in developing scalable digital solutions for international markets, transforming creative ideas into measurable business success.</p>
+    <div class="max-w-7xl mx-auto text-center mb-12 px-6">
+      <h2 class="text-4xl font-bold mb-4">Our Services</h2>
+      <p class="text-lg text-gray-600 max-w-3xl mx-auto">
+        Frohsinn LLC develops international digital solutions with a focus on scalability, compliance, and automation.  
+        We provide structured frameworks designed for global business operations.
+      </p>
     </div>
+
     <div class="grid md:grid-cols-3 gap-8 max-w-7xl mx-auto px-6">
-      <div class="bg-white shadow-lg rounded-xl p-8">
+      <!-- Service 1 -->
+      <div class="bg-white shadow-lg rounded-xl p-8 hover:shadow-2xl transition">
         <i class="fas fa-sitemap text-blue-700 text-4xl mb-4"></i>
         <h3 class="text-2xl font-bold mb-3">Digital Business Models</h3>
-        <p class="text-gray-600 mb-4">Strategic frameworks and architectures that scale with your business growth.</p>
+        <p class="text-gray-600 mb-4">Frameworks that scale with your business growth.</p>
         <ul class="text-sm text-gray-600 space-y-2">
           <li>✔ Revenue Model Optimization</li>
-          <li>✔ Market Analysis & Strategy</li>
+          <li>✔ Market Entry Strategies</li>
           <li>✔ Competitive Positioning</li>
         </ul>
+        <p class="mt-4 font-semibold text-blue-700">Starting at $2,500</p>
       </div>
-      <div class="bg-white shadow-lg rounded-xl p-8">
+
+      <!-- Service 2 -->
+      <div class="bg-white shadow-lg rounded-xl p-8 hover:shadow-2xl transition">
         <i class="fas fa-code text-pink-600 text-4xl mb-4"></i>
         <h3 class="text-2xl font-bold mb-3">Platform Development</h3>
-        <p class="text-gray-600 mb-4">Custom platforms built for performance, security, and scalability.</p>
+        <p class="text-gray-600 mb-4">Enterprise-grade platforms built for performance & security.</p>
         <ul class="text-sm text-gray-600 space-y-2">
           <li>✔ Cloud-Native Architecture</li>
           <li>✔ API Development & Integration</li>
           <li>✔ Performance Optimization</li>
         </ul>
+        <p class="mt-4 font-semibold text-pink-600">Starting at $5,000</p>
       </div>
-      <div class="bg-white shadow-lg rounded-xl p-8">
+
+      <!-- Service 3 -->
+      <div class="bg-white shadow-lg rounded-xl p-8 hover:shadow-2xl transition">
         <i class="fas fa-cogs text-orange-500 text-4xl mb-4"></i>
         <h3 class="text-2xl font-bold mb-3">Automated Systems</h3>
-        <p class="text-gray-600 mb-4">Intelligent automation that reduces manual work and increases efficiency.</p>
+        <p class="text-gray-600 mb-4">Intelligent automation for efficiency and reliability.</p>
         <ul class="text-sm text-gray-600 space-y-2">
           <li>✔ Workflow Automation</li>
           <li>✔ Data Processing Pipelines</li>
           <li>✔ Quality Assurance Systems</li>
         </ul>
+        <p class="mt-4 font-semibold text-orange-500">Starting at $3,500</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section id="projects" class="py-20 bg-white">
+    <div class="max-w-7xl mx-auto text-center mb-12 px-6">
+      <h2 class="text-4xl font-bold mb-4">Selected Projects</h2>
+      <p class="text-lg text-gray-600 max-w-3xl mx-auto">
+        Examples of international initiatives powered by Frohsinn LLC.  
+        Our work demonstrates scalability, compliance, and measurable impact.
+      </p>
+    </div>
+
+    <div class="grid md:grid-cols-3 gap-8 max-w-7xl mx-auto px-6">
+      <!-- Project 1 -->
+      <div class="bg-gray-50 rounded-xl shadow-md p-6 hover:shadow-xl transition">
+        <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/389c51f9-4ff3-4aa6-1422-bb8a8b553f00/publicContain" alt="Digital Platform" class="rounded-lg mb-4">
+        <h3 class="text-xl font-bold mb-2">Event Management Platform</h3>
+        <p class="text-gray-600 text-sm">Built a cloud-based system for international event operations, enabling seamless scaling across Europe.</p>
+      </div>
+
+      <!-- Project 2 -->
+      <div class="bg-gray-50 rounded-xl shadow-md p-6 hover:shadow-xl transition">
+        <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/02af05a2-f325-4039-9864-4b5e3d111300/public" alt="Automation System" class="rounded-lg mb-4">
+        <h3 class="text-xl font-bold mb-2">Automation for Finance</h3>
+        <p class="text-gray-600 text-sm">Deployed automated data pipelines reducing manual input by 75% for international finance operations.</p>
+      </div>
+
+      <!-- Project 3 -->
+      <div class="bg-gray-50 rounded-xl shadow-md p-6 hover:shadow-xl transition">
+        <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/b21c9d8d-7f3a-40ee-22e9-7d9c267a2d00/publicContain" alt="Global Consulting" class="rounded-lg mb-4">
+        <h3 class="text-xl font-bold mb-2">Global Consulting Rollout</h3>
+        <p class="text-gray-600 text-sm">Designed digital business models for a cross-border consulting group, ensuring tax compliance & scalability.</p>
       </div>
     </div>
   </section>
 
   <!-- Why Choose -->
-  <section id="about" class="py-20 bg-white">
+  <section id="about" class="py-20 bg-gray-50">
     <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 px-6 items-center">
-      <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/02af05a2-f325-4039-9864-4b5e3d111300/public" alt="Team Strategy" class="rounded-xl shadow-lg">
       <div>
         <h2 class="text-4xl font-bold mb-6">Why International Companies Choose Frohsinn LLC</h2>
         <p class="text-lg text-gray-600 mb-6">As a US-registered LLC focused on international projects, we provide global solutions with optimal tax efficiency and regulatory compliance.</p>
@@ -98,6 +143,7 @@
           <li>💰 Tax-Optimized Structure</li>
         </ul>
       </div>
+      <img src="https://imagedelivery.net/xaKlCos5cTg_1RWzIu_h-A/02af05a2-f325-4039-9864-4b5e3d111300/public" alt="Team Strategy" class="rounded-xl shadow-lg">
     </div>
   </section>
 
